# voxbrief

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo_meeting.txt  make_demo_audio.py
src/voxbrief/: __init__.py  brief.py  cli.py  llm.py  server.py  transcribe.py  types.py
tests/: test_brief.py  test_integration.py  test_server.py
