[project]
name = "voxbrief"
version = "0.1.0"
description = "Local meeting-intelligence agent: transcribe -> structured brief -> Q&A. Library, CLI, and MCP server."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Berk Gökden", email = "berk@primaxiom.ai" }]
keywords = ["meeting-intelligence", "speech-to-text", "whisper", "mcp", "llm", "agents", "summarization", "voice-ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["mcp>=1.2.0"]

[project.optional-dependencies]
whisper = ["faster-whisper>=1.0"]
llama-cpp = ["llama-cpp-python>=0.2"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/bgokden/voxbrief"
Author = "https://berkgokden.com"

[project.scripts]
voxbrief = "voxbrief.cli:main"
voxbrief-mcp = "voxbrief.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voxbrief"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["integration: real-model tests, skipped unless configured"]
